--- a/LifeScheduler.Frontend/Pages/Counter.razor
+++ b/LifeScheduler.Frontend/Pages/Counter.razor
@@ -4,12 +4,12 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<RadzenButton Click="@ButtonClicked" Text="Hi">Click me</RadzenButton>
 
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
+    void ButtonClicked()
     {
         currentCount++;
     }
